--- a/style/style.css
+++ b/style/style.css
@@ -306,3 +306,137 @@ body {
     background-color: #fff;
 }
 
+.cart__main {
+    font-family: 'Montserrat', sans-serif;
+    padding: 65px 0 60px;
+    max-width: 821px;
+    margin: 0 auto;
+}
+
+.cart__header {
+    padding: 30px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #F4F4F4;
+}
+
+.cart__header-logo {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 39px;
+    letter-spacing: 0.01em;
+    color: #000000;
+}
+
+.cart__header-btn {
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #B6B6B6;
+    background: none;
+    border: none;
+    cursor: pointer;
+}  
+
+.cart__header-btn:hover {
+    color: #000;
+}
+
+.cart__pizza {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 0;
+    border-bottom: 1px solid #F4F4F4;
+}
+
+.cart__pizza-info {
+    display: flex;
+    align-items: center;
+}
+
+.cart__pizza-img {
+    height: 80px;
+    width: 80px;
+    margin-right: 15px;
+}
+
+.cart__pizza-name {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 27px;
+    letter-spacing: 0.01em;
+    color: #000000;
+}
+
+.cart__pizza-text {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    letter-spacing: 0.01em;
+    color: #8D8D8D;
+}
+
+.cart__pizza-amount {
+    display: flex;
+    align-items: center;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 27px;
+    letter-spacing: 0.01em;
+    color: #000000;
+}
+
+.cart__pizza-amount>span {
+    margin: 0 12px;
+}
+
+.cart__pizza-btn {
+    font-family: 'Montserrat', sans-serif;
+    background: #FFFFFF;
+    border: 2px solid #FE5F1E;
+    box-sizing: border-box;
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    color: #FE5F1E;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.cart__pizza-btn:hover {
+    background-color: #FE5F1E;
+    color: #ffffff;
+}
+
+.cart__pizza-cost {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 27px;
+    letter-spacing: 0.01em;
+    color: #000000;
+}
+
+.cart__pizza-delete {
+    background: #FFFFFF;
+    border: 2px solid #D7D7D7;
+    box-sizing: border-box;
+    border-radius: 50%;
+    color: #D7D7D7;
+    width: 32px;
+    height: 32px;
+    cursor: pointer;
+}
+
+.cart__pizza-delete:hover {
+    background-color: #D7D7D7;
+    color: #000000;
+}
+
